tests/negative/m34_nonzero_pointer.c
int main(void) {
    int *p;
    p = 1;
    return 0;
}
